# langchain-community

./: CLAUDE.md  README.md
libs/community/: Makefile  README.md  extended_testing_deps.txt  pyproject.toml
libs/community/langchain_community/: cache.py
libs/community/langchain_community/adapters/: openai.py
libs/community/langchain_community/chat_models/: baichuan.py  litellm.py  sparkllm.py  tongyi.py
libs/community/langchain_community/document_loaders/: rss.py
libs/community/langchain_community/document_loaders/parsers/: pdf.py
libs/community/langchain_community/utilities/: gitlab.py  oracleai.py  pubmed.py
libs/community/langchain_community/vectorstores/: __init__.py  opensearch_vector_search.py  oraclevs.py
libs/community/tests/integration_tests/agent/: test_ainetwork_agent.py
libs/community/tests/integration_tests/cache/: test_astradb.py  test_azure_cosmosdb_cache.py  test_azure_cosmosdbnosql_cache.py  test_cassandra.py  test_gptcache.py  test_memcached_cache.py  test_momento_cache.py  test_opensearch_cache.py  test_redis_cache.py  test_singlestoredb_cache.py  test_upstash_redis_cache.py
libs/community/tests/integration_tests/callbacks/: test_langchain_tracer.py  test_openai_callback.py  test_streamlit_callback.py  test_wandb_tracer.py
libs/community/tests/integration_tests/chains/: test_dalle_agent.py  test_graph_database.py  test_graph_database_sparql.py  test_ontotext_graphdb_qa.py  test_react.py  test_retrieval_qa.py  test_retrieval_qa_with_sources.py  test_self_ask_with_search.py
libs/community/tests/integration_tests/chat_message_histories/: test_streamlit.py
libs/community/tests/integration_tests/chat_models/: test_baichuan.py  test_coze.py  test_gpt_router.py  test_hunyuan.py  test_jinachat.py  test_konko.py  test_litellm.py  test_openai.py  test_snowflake.py
libs/community/tests/integration_tests/document_loaders/: test_news.py  test_url_playwright.py
libs/community/tests/integration_tests/graph_vectorstores/: test_cassandra.py
libs/community/tests/integration_tests/llms/: test_anthropic.py  test_azureml_endpoint.py  test_bedrock.py  test_openai.py
libs/community/tests/integration_tests/memory/: test_cosmos_db.py  test_elasticsearch.py  test_firestore.py  test_memory_astradb.py  test_memory_cassandra.py  test_momento.py  test_mongodb.py  test_neo4j.py  test_redis.py  test_rockset.py  test_singlestoredb.py  test_upstash_redis.py  test_xata.py
libs/community/tests/integration_tests/retrievers/: test_contextual_compression.py  test_merger_retriever.py
libs/community/tests/integration_tests/utilities/: test_arxiv.py  test_duckduckdgo_search_api.py  test_pubmed.py
libs/community/tests/integration_tests/vectorstores/: test_milvus.py
libs/community/tests/unit_tests/: test_cache.py  test_dependencies.py  test_sql_database_schema.py
libs/community/tests/unit_tests/agent_toolkits/: test_slack_toolkit.py
libs/community/tests/unit_tests/agents/: test_react.py  test_tools.py
libs/community/tests/unit_tests/callbacks/: test_openai_info.py
libs/community/tests/unit_tests/chains/: test_api.py  test_graph_qa.py  test_llm.py  test_natbot.py
libs/community/tests/unit_tests/chat_loaders/: test_telegram.py
libs/community/tests/unit_tests/chat_models/: konko.py  test_friendli.py  test_mlflow.py  test_oci_data_science.py  test_openai.py  test_perplexity.py  test_writer.py
libs/community/tests/unit_tests/document_loaders/: test_arcgis_loader.py  test_firecrawl.py  test_hugging_face_model.py  test_json_loader.py  test_mongodb.py
libs/community/tests/unit_tests/embeddings/: test_oci_gen_ai_embedding.py
(+37 files in other folders)
